# magicmapper

./: setup.cfg
src/: magic.py
tests/: test_magic.py
