[metadata]
name = magic_mapper
version = 0.0.1
author = Matti Eiden
author_email = snaipperi@gmail.com
description = Mapping data structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voneiden/magicmapper
project_urls =
    Bug Tracker = https://github.com/voneiden/magicmapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
